--- a/app/src/main/res/layout/mvp_chat_activity.xml
+++ b/app/src/main/res/layout/mvp_chat_activity.xml
@@ -3,7 +3,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    tools:context=".MVP.Views.ChatView">
 
     <TextView
         android:id="@+id/text_header"
@@ -16,10 +17,16 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
+        <EditText
+            android:id="@+id/edt_sender_name"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"/>
+
         <android.support.v7.widget.RecyclerView
             android:id="@+id/recycler_view"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:layout_below="@id/edt_sender_name"
             android:layout_above="@+id/layout_input">
         </android.support.v7.widget.RecyclerView>
 
@@ -44,7 +51,8 @@
                 android:layout_width="@dimen/small_width"
                 android:layout_height="match_parent"
                 android:text="@string/send_text"
-                style="@style/regular_buttons"/>
+                style="@style/regular_buttons"
+                android:onClick="onSendMessage"/>
         </LinearLayout>
     </RelativeLayout>
 </LinearLayout>
