--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -19,7 +19,8 @@
         android:textColor="#000000"
         android:textStyle="bold"
         android:layout_marginTop="20dp"
-        android:background="@drawable/btn_theme"/>
+        android:background="@drawable/btn_theme"
+        android:onClick="goToMVC"/>
 
     <Button
         android:id="@+id/btn_mvp"
