--- a/app/src/main/res/layout/mvvm_chat_activity.xml
+++ b/app/src/main/res/layout/mvvm_chat_activity.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools">
 
     <data>
         <variable name="viewModel" type="com.cauvong.softwarearchitecture.MVVM.ViewModels.ChatViewModel"/>
@@ -61,7 +62,7 @@
                 android:layout_height="match_parent"
                 android:text="@string/send_text"
                 style="@style/regular_buttons"
-                android:onClick="@{()-> viewModel.sendMessage()"/>
+                android:onClick="@{()-> activity.sendMessage()"/>
         </LinearLayout>
     </RelativeLayout>
 </LinearLayout>
