--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -43,5 +43,6 @@
         android:backgroundTint="@color/colorPrimary"
         android:text="@string/model_view_viewmodel"
         android:layout_marginTop="20dp"
-        android:background="@drawable/btn_theme"/>
+        android:background="@drawable/btn_theme"
+        android:onClick="goToMVVM"/>
 </LinearLayout>
