--- a/app/src/main/res/layout/mvvm_chat_activity.xml
+++ b/app/src/main/res/layout/mvvm_chat_activity.xml
@@ -30,7 +30,8 @@
             android:id="@+id/edt_sender_name"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="@string/sender_s_name"/>
+            android:hint="@string/sender_s_name"
+            android:text="@={viewModel.senderName}"/>
 
         <android.support.v7.widget.RecyclerView
             android:id="@+id/recycler_view"
@@ -55,6 +56,7 @@
                 android:layout_weight="1"
                 android:hint="@string/hint_typing"
                 android:layout_marginRight="@dimen/margin_average"
+                android:text="@={viewModel.content}"
                 style="@style/regular_editTexts"/>
             <Button
                 android:id="@+id/button_send_message"
@@ -62,7 +64,7 @@
                 android:layout_height="match_parent"
                 android:text="@string/send_text"
                 style="@style/regular_buttons"
-                android:onClick="@{()-> activity.sendMessage()"/>
+                android:onClick="@{() -> viewModel.sendMessage()}"/>
         </LinearLayout>
     </RelativeLayout>
 </LinearLayout>
