--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -3,6 +3,11 @@
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
 
+    <dimen name="login_button_radius">30dp</dimen>
+    <dimen name="login_button_height">60dp</dimen>
+    <dimen name="login_holder_height">25dp</dimen>
+    <dimen name="login_horizontalline_spacing">10dp</dimen>
+
     <dimen name="small_font_size">12sp</dimen>
     <dimen name="average_font_size">14sp</dimen>
     <dimen name="large_font_size">16sp</dimen>
