--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,6 +1,6 @@
 <resources>
 
-    <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
+    <style name="AppTheme" parent="Theme.AppCompat.Light.NoActionBar">
         <!-- Customize your theme here. -->
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
@@ -82,6 +82,14 @@
     <style name="regular_layouts">
         <item name="android:padding">5dp</item>
         <item name="android:background">@color/colorAccent</item>
+    </style>
+
+
+    <!--Login Activity Button style-->
+    <style name="LoginButtonsStyle">
+        <item name="android:textColor">#ffffff</item>
+        <item name="android:gravity">center</item>
+        <item name="android:layout_margin">5dp</item>
     </style>
 
 </resources>
