--- a/app/src/main/res/layout/mvc_chat_activity.xml
+++ b/app/src/main/res/layout/mvc_chat_activity.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".MVC.Views.ChatActivity">
+    tools:context=".MVC.Views.ChatView">
 
     <TextView
         android:id="@+id/text_header"
@@ -17,17 +17,11 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-        <TextView
-            android:id="@+id/txt_sender_name"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"/>
-
         <android.support.v7.widget.RecyclerView
             android:id="@+id/recycler_view"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_above="@+id/layout_input"
-            android:layout_below="@id/edt_sender_name">
+            android:layout_above="@+id/layout_input">
         </android.support.v7.widget.RecyclerView>
 
         <LinearLayout
